# harness-training

./: .env.example  .gitignore  LICENSE  README.md  TECH_DESIGN.md  program.md  pyproject.toml
config/: harbor_config.toml  harness_config.json  harness_config.swe.json  harness_config.template.json  quickstart_eval.yaml  quickstart_train.yaml  run_config.template.yaml  smoke_config.json  task_duration_priors.json  train_harness.yaml
config/llm/: gptoss20_openrouter.yaml  local.yaml  qwen35_local.yaml
config/task_panels/: swebench.yaml  swebench_full.yaml  terminal_bench.yaml  terminal_bench_full.yaml  terminal_bench_no_cyber.yaml
examples/: quickstart.py
scripts/: __init__.py  evaluate.py  setup-apt-cache.sh  setup-pypi-cache.sh  train.py
src/: cli.py  concurrency.py  config.py  contracts.py  determinism.py  measurement.py  metrics.py  repo.py  retry.py  serialization.py  trace.py  worker.py
src/adapters/: chatgpt_codex.py  env.py  harbor_docker.py  llm_base.py  open_router.py
src/control/: agent_backend.py  gates.py  repo.py  supervisor.py  supervisor_state.py
src/env/: README.md  base.py  docker.py  docker_shell.py  harbor.py  swe.py  swebench_verify.py  terminal_bench.py  verifier_context.Dockerfile
src/experiment/: executor.py  gate.py  orchestrator.py  record.py  runner.py  trial.py  writer.py
src/harness/: config.py  contracts.py  core.py
src/llm/: README.md  agent_backend.py  backend.py  base.py  codex.py  openai_completion_backend.py  openrouter.py  token_counter.py  transport.py
src/plugins/: README.md
src/policy/: README.md  base.py  core.py
src/rollout/: README.md  certification.py  episode.py  execution.py  metrics.py  records.py  sampler.py  store.py  telemetry.py
src/supervisor/: agent.py  agent_backend.py  loop.py  policy.py  subproc.py  workspace.py
src/trainer/: README.md  __init__.py  estimator.py  logger.py  loss.py  optim.py  parameter.py  trainer.py
tests/: README.md  conftest.py  test_cli.py  test_concurrency.py  test_config.py  test_determinism.py  test_evaluate.py  test_metrics.py  test_trace.py
tests/adapters/: test_backend.py  test_chatgpt_codex.py  test_env.py  test_infra_retry.py  test_llm_base.py  test_open_router.py  test_openai_completion_backend.py  test_token_counter.py
tests/control/: test_agent_backend.py  test_supervisor.py  test_supervisor_state.py
tests/env/: test_base.py  test_docker_shell.py  test_swe.py  test_swebench_verify.py  test_terminal_bench.py
tests/experiment/: test_executor.py  test_gate.py  test_orchestrator.py  test_record.py  test_runner.py  test_trial.py
tests/goldens/: auto_cycle_golden.json
(+60 files in other folders)
